--- a/styles/Footer.module.sass
+++ b/styles/Footer.module.sass
@@ -1,8 +1,8 @@
 .footer
   background-color: var(--footer-background)
   a, small
-    color: var(--footer-link-color)
+    color: var(--footer-link)
     text-decoration: none
     transition: ease-in-out color .05s
   a:hover
-    color: var(--footer-link-color-hover)
+    color: var(--footer-link-hover)
