--- a/styles/Footer.module.sass
+++ b/styles/Footer.module.sass
@@ -3,6 +3,10 @@
   a, small
     color: var(--footer-link)
     text-decoration: none
+    -webkit-transition: ease-in-out color .05s
+    -moz-transition: ease-in-out color .05s
+    -ms-transition: ease-in-out color .05s
+    -o-transition: ease-in-out color .05s
     transition: ease-in-out color .05s
   a:hover
     color: var(--footer-link-hover)
