--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -8,9 +8,109 @@
     width: 100%
     object-fit: cover
 
-.dashboardContent
+.carouselGradient
+  position: relative
+  &:after
+    content: ''
+    top: 0
+    width: 100%
+    height: 100%
+    position: absolute
+    background: -moz-linear-gradient(245deg, var(--brand) 0%, rgba(255,255,255,0) 40%, rgba(255,255,255,0) 60%, var(--brand) 100%)
+    background: -webkit-linear-gradient(245deg, var(--brand) 0%, rgba(255,255,255,0) 40%, rgba(255,255,255,0) 60%, var(--brand) 100%)
+    background: linear-gradient(245deg, var(--brand) 0%, rgba(255,255,255,0) 40%, rgba(255,255,255,0) 60%, var(--brand) 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=var(--brand),endColorstr=var(--brand),GradientType=1)
+
+.dashboardContentContainer
   background: var(--gradient-color-1)
   background: -moz-linear-gradient(180deg, var(--gradient-color-1) 75%, var(--gradient-color-2) 100%)
   background: -webkit-linear-gradient(180deg, var(--gradient-color-1) 75%, var(--gradient-color-2) 100%)
   background: linear-gradient(180deg, var(--gradient-color-1) 75%, var(--gradient-color-2) 100%)
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=var(--gradient-color-1),endColorstr=var(--gradient-color-2),GradientType=1)
+
+.websiteContent
+  //overflow: hidden
+
+.contentListContainer
+  overflow: hidden
+
+.contentListSpacer
+  height: (190px/2*3)
+
+.contentList
+  width: 100vw
+  max-width: 100%
+  position: absolute
+  left: 0
+  overflow-x: visible
+  // We want to be able to scroll through the catalog
+  overflow-y: scroll
+  // Hide that ugly scrollbar, ew
+  &::-webkit-scrollbar
+    width: 0
+    background: transparent
+  &::-webkit-scrollbar-thumb
+    background: transparent
+  &::-webkit-scrollbar-track
+    background: transparent
+
+.contentPoster
+  // Poster aspect ratio is roughly 2:3
+  width: 190px
+  height: (190px/2*3)
+  object-fit: cover
+  overflow: hidden
+  text-align: center
+  position: relative
+  z-index: 1
+  &:hover
+    width: 200px
+    height: (200px/2*3)
+    box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.50)
+    -webkit-transition: all 0.2s ease-in
+    -moz-transition: all 0.2s ease-in
+    -ms-transition: all 0.2s ease-in
+    -o-transition: all 0.2s ease-in
+    transition: all 0.2s ease-in
+  img
+    height: 100%
+    width: auto
+    margin: auto
+    position: absolute
+    z-index: 1
+    left: 50%
+    top: 50%
+    -webkit-transform: translateY(-50%) translateX(-50%)
+  // The stuff when we hover some content - show title, description, possibly author - stuff like that
+  div.contentPosterHover
+    position: absolute
+    background-color: var(--hover-card-background)
+    opacity: 0
+    text-align: left
+    padding: 10px
+    z-index: 2
+    bottom: 0
+    width: 100%
+    min-height: 20%
+    max-height: 60%
+    -webkit-transition: all 0.2s ease-in
+    -moz-transition: all 0.2s ease-in
+    -ms-transition: all 0.2s ease-in
+    -o-transition: all 0.2s ease-in
+    transition: all 0.2s ease-in
+    overflow-y: scroll
+    overflow-x: hidden
+    // Hide that ugly scrollbar, ew
+    &::-webkit-scrollbar
+      width: 0
+      background: transparent
+    &::-webkit-scrollbar-thumb
+      background: transparent
+    &::-webkit-scrollbar-track
+      background: transparent
+  // Link formatting applied to the hover preview as well, so gotta do this
+  a
+    text-decoration: none
+    color: var(--white)
+    &:hover
+      color: var(--white)
