--- a/styles/Navbar.module.sass
+++ b/styles/Navbar.module.sass
@@ -6,6 +6,10 @@
   transition: top 0.3s
   a
     color: var(--nav-link)
+    -webkit-transition: ease-in-out color .15s
+    -moz-transition: ease-in-out color .15s
+    -ms-transition: ease-in-out color .15s
+    -o-transition: ease-in-out color .15s
     transition: ease-in-out color .15s
   a:hover
     color: var(--nav-link-hover)
