--- a/styles/global.sass
+++ b/styles/global.sass
@@ -3,3 +3,15 @@
 html, body
   background-color: var(--background)
   color: var(--text)
+
+::-webkit-scrollbar
+  width: 8px
+
+::-webkit-scrollbar-track
+  background: var(--scrollbar)
+
+::-webkit-scrollbar-thumb
+  background: var(--scrollbar-thumb)
+
+::-webkit-scrollbar-thumb:hover
+  background: var(--scrollbar-thumb-hover)
