Added stuff for fetching from GraphQL API, very basic, and added placeholder missing images

--- a/styles/Footer.module.sass
+++ b/styles/Footer.module.sass
@@ -1,5 +1,6 @@
 .footer
   background-color: var(--footer-background)
+  width: 100%
   a, small
     color: var(--footer-link)
     text-decoration: none
