--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -4,7 +4,7 @@
   overflow: hidden
   img
     min-height: 250px
-    max-height: 80vh
+    max-height: 50vh
     width: 100%
     object-fit: cover
 
@@ -72,6 +72,10 @@
     -ms-transition: all 0.2s ease-in
     -o-transition: all 0.2s ease-in
     transition: all 0.2s ease-in
+
+    // Increase opacity of posterHover
+    div.contentPosterHover
+      opacity: 100
   img
     height: 100%
     width: auto
