Lots of changes - testing player with YouTube, API endpoint changes and lots of bugfixes

--- a/styles/Footer.module.sass
+++ b/styles/Footer.module.sass
@@ -11,3 +11,7 @@
     transition: ease-in-out color .05s
   a:hover
     color: var(--footer-link-hover)
+
+  .themeToggler
+    &::before, &::after
+      cursor: pointer
