--- a/styles/global.sass
+++ b/styles/global.sass
@@ -3,6 +3,19 @@
 html, body
   background-color: var(--background)
   color: var(--text)
+  // Probably not needed
+  margin: 0
+  padding: 0
+  // No select
+  -webkit-touch-callout: none /* iOS Safari */
+  -webkit-user-select: none /* Safari */
+  -khtml-user-select: none /* Konqueror HTML */
+  -moz-user-select: none /* Old versions of Firefox */
+  -ms-user-select: none /* Internet Explorer/Edge */
+  user-select: none /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+
+body
+  min-height: 100vh
 
 ::-webkit-scrollbar
   width: 8px
