--- a/styles/ContentView.module.sass
+++ b/styles/ContentView.module.sass
@@ -1,4 +1,45 @@
+.contentViewContainer
+  position: relative
+
+.videoPlayerContainer
+  position: fixed
+  z-index: 10
+  background-color: rgba(0, 0, 0, 0.85)
+  width: 100%
+  top: 0
+  bottom: 0
+  .videoPlayerInnerContainer
+    position: relative
+    padding: 0
+    right: 0
+    left: 0
+    top: 0
+    bottom: 0
+    margin: auto
+
+    .videoExitButton
+      position: absolute
+      right: 0
+      top: 0
+      margin: 10px
+      padding: 5px
+    .videoPlayer
+      margin: auto
+      right: 0
+      left: 0
+      top: 0
+      bottom: 0
+      width: 90%
+      //background-color: white
+      //&::before
+      //  padding-top: 56.25%
+
+.contentVideosContainer, .contentInformationContainer
+  position: relative
+  z-index: 1
+
 .contentInformationContainer
+  position: relative
   img.contentBanner
     min-height: 250px
     max-height: 50vh
@@ -7,34 +48,39 @@
     filter: blur(4px)
     -webkit-filter: blur(4px)
 
-  .contentInformation
-    position: relative
-    bottom: 100px
-
+  .contentBannerOverlay
+    position: absolute
+    bottom: 30px
+    .contentInformation
+      position: relative
+    .contentButtons
+      position: relative
 
 .contentVideos
-  .contentPoster
-    // Poster aspect ratio is roughly 2:3
-    width: 190px
-    height: (190px/2*3)
+  position: relative
+  padding: 5px
+
+.contentVideo
+  margin: 5px
+
+  a
+    cursor: pointer
+  .contentThumbnail
+    // We take video aspect ratio (16:9)
+    height: 196px
+    width: (196px*(16/9))
     object-fit: cover
     overflow: hidden
     text-align: center
     position: relative
     z-index: 1
     &:hover
-      width: 200px
-      height: (200px/2*3)
-      box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.50)
+      box-shadow: 0px 0px 26px 8px rgba(0, 0, 0, 0.50)
       -webkit-transition: all 0.2s ease-in
       -moz-transition: all 0.2s ease-in
       -ms-transition: all 0.2s ease-in
       -o-transition: all 0.2s ease-in
       transition: all 0.2s ease-in
-
-      // Increase opacity of posterHover
-      div.contentPosterHover
-        opacity: 100
     img
       height: 100%
       width: auto
@@ -44,36 +90,24 @@
       left: 50%
       top: 50%
       -webkit-transform: translateY(-50%) translateX(-50%)
-    // The stuff when we hover some content - show title, description, possibly author - stuff like that
-    div.contentPosterHover
-      position: absolute
-      background-color: var(--hover-card-background)
-      opacity: 0
-      text-align: left
-      padding: 10px
-      z-index: 2
-      bottom: 0
-      width: 100%
-      min-height: 20%
-      max-height: 60%
-      -webkit-transition: all 0.2s ease-in
-      -moz-transition: all 0.2s ease-in
-      -ms-transition: all 0.2s ease-in
-      -o-transition: all 0.2s ease-in
-      transition: all 0.2s ease-in
-      overflow-y: scroll
-      overflow-x: hidden
-      // Hide that ugly scrollbar, ew
-      &::-webkit-scrollbar
-        width: 0
-        background: transparent
-      &::-webkit-scrollbar-thumb
-        background: transparent
-      &::-webkit-scrollbar-track
-        background: transparent
-    // Link formatting applied to the hover preview as well, so gotta do this
+  .contentVideoInformation
+    overflow: hidden
+    line-height: 20px
+    font-size: 13px
+    font-family: Open Sans Semibold, Helvetica Neue, Helvetica, Arial, sans-serif
+    .contentVideoTitle
+      height: 20px
+      color: var(----text)
+    .contentVideoEpisodeNumber
+      height: 20px
+      color: hsla(0,0%,100%,.45)
+
     a
       text-decoration: none
-      color: var(--white)
+      -webkit-transition: ease-in-out color .15s
+      -moz-transition: ease-in-out color .15s
+      -ms-transition: ease-in-out color .15s
+      -o-transition: ease-in-out color .15s
+      transition: ease-in-out color .15s
       &:hover
-        color: var(--white)
+        text-decoration: none
