whoops, forgot to add changes before

--- a/styles/Navbar.module.sass
+++ b/styles/Navbar.module.sass
@@ -14,7 +14,15 @@
   a:hover
     color: var(--nav-link-hover)
     text-decoration: none
+  .searchButton
+    background-color: unset
+    color: var(--brand)
+    border-color: var(--brand)
+    &:hover
+      background-color: var(--brand-darker)
+      border-color: var(--brand)
+      color: var(--white)
 
-.navbarToggler
-  color: var(--nav-link)
-  border-color: var(--nav-link)
+  .navbarToggler
+    color: var(--brand)
+    border-color: var(--brand)
