--- a/styles/ContentView.module.sass
+++ b/styles/ContentView.module.sass
@@ -23,6 +23,12 @@
       top: 0
       margin: 10px
       padding: 5px
+      color: hsla(0, 0%, 0%, .75)
+      &:hover
+        color: hsla(0, 0%, 0%, .95)
+      svg
+        height: 2.5rem
+        width: auto
     .videoPlayer
       margin: auto
       right: 0
@@ -30,6 +36,9 @@
       top: 0
       bottom: 0
       width: 90%
+      border-style: solid
+      border-color: var(--brand)
+      border-radius: 5px
       // Need max-width, since we with the padding-top (aspect ratio) can have it scale infinitely on height
       max-width: 1000px
       //background-color: white
@@ -62,6 +71,29 @@
       position: relative
     .contentButtons
       position: relative
+      .contentPlayButton
+        display: flex
+        flex-direction: row
+        align-items: center
+        align-content: center
+        justify-items: center
+        justify-content: center
+        background-color: var(--brand)
+        border-color: var(--brand)
+        color: white
+        svg
+          //height: 100%
+          height: 1.5rem
+          width: auto
+          margin: auto
+          //position: absolute
+          //top: 50%
+          //-ms-transform: translateY(-50%)
+          //transform: translateY(-50%)
+        &:hover
+          background-color: var(--brand-darker)
+          border-color: var(--brand-darker)
+
 
 .contentVideos
   position: relative
@@ -81,13 +113,22 @@
     text-align: center
     position: relative
     z-index: 1
+
+    // Smooth transitions
+    -webkit-transition: all 0.2s ease-in
+    -moz-transition: all 0.2s ease-in
+    -ms-transition: all 0.2s ease-in
+    -o-transition: all 0.2s ease-in
+    transition: all 0.2s ease-in
     &:hover
-      box-shadow: 0px 0px 26px 8px rgba(0, 0, 0, 0.50)
-      -webkit-transition: all 0.2s ease-in
-      -moz-transition: all 0.2s ease-in
-      -ms-transition: all 0.2s ease-in
-      -o-transition: all 0.2s ease-in
-      transition: all 0.2s ease-in
+      //box-shadow: 0px 0px 26px 8px rgba(0, 0, 0, 0.50)
+
+      .thumbnailPlayButton
+        opacity: 100
+
+      img
+        // Add the border
+        border-style: solid
     img
       height: 100%
       width: auto
@@ -97,6 +138,25 @@
       left: 50%
       top: 50%
       -webkit-transform: translateY(-50%) translateX(-50%)
+      // Border style - the border is hidden
+      border-color: var(--brand)
+      border-radius: 5px
+    .thumbnailPlayButton
+      opacity: 0
+      color: var(--video-play-button)
+      height: 45%
+      z-index: 2
+      position: absolute
+      width: auto
+      margin: auto
+      left: 50%
+      top: 50%
+      -webkit-transform: translateY(-50%) translateX(-50%)
+      -webkit-transition: all 0.2s ease-in
+      -moz-transition: all 0.2s ease-in
+      -ms-transition: all 0.2s ease-in
+      -o-transition: all 0.2s ease-in
+      transition: all 0.2s ease-in
   .contentVideoInformation
     overflow: hidden
     line-height: 20px
@@ -104,10 +164,10 @@
     font-family: Open Sans Semibold, Helvetica Neue, Helvetica, Arial, sans-serif
     .contentVideoTitle
       height: 20px
-      color: var(----text)
+      color: var(--video-title-text)
     .contentVideoEpisodeNumber
       height: 20px
-      color: hsla(0,0%,100%,.45)
+      color: var(--video-episode-text)
 
     a
       text-decoration: none
