--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -63,18 +63,29 @@
   text-align: center
   position: relative
   z-index: 1
+  // Border style - it is hidden
+  border-color: var(--brand)
+  border-radius: 5px
+
+  // Add transitions
+  -webkit-transition: all 0.2s ease-in
+  -moz-transition: all 0.2s ease-in
+  -ms-transition: all 0.2s ease-in
+  -o-transition: all 0.2s ease-in
+  transition: all 0.2s ease-in
   &:hover
-    width: 200px
-    height: (200px/2*3)
-    box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.50)
-    -webkit-transition: all 0.2s ease-in
-    -moz-transition: all 0.2s ease-in
-    -ms-transition: all 0.2s ease-in
-    -o-transition: all 0.2s ease-in
-    transition: all 0.2s ease-in
+    // It looked weird making them bigger when hovered
+    //width: 200px
+    //height: (200px/2*3)
+
+    // Add the border
+    border-style: solid
+
+    // Add a shadow
+    //box-shadow: 0px 0px 26px 10px rgba(0, 0, 0, 0.50)
 
     // Increase opacity of posterHover
-    div.contentPosterHover
+    .contentPosterHover
       opacity: 100
   img
     height: 100%
@@ -104,6 +115,9 @@
     transition: all 0.2s ease-in
     overflow-y: scroll
     overflow-x: hidden
+    // Always show the hover information on small devices
+    @media (max-width: 550px)
+      opacity: 100
     // Hide that ugly scrollbar, ew
     &::-webkit-scrollbar
       width: 0
