--- a/styles/ContentView.module.sass
+++ b/styles/ContentView.module.sass
@@ -8,6 +8,20 @@
   width: 100%
   top: 0
   bottom: 0
+  .videoExitButtonContainer
+    height: 60%
+    .videoExitButton
+      position: absolute
+      left: 0
+      top: 0
+      margin: 10px 20px 10px 10px
+      padding: 5px
+      color: hsla(0, 0%, 100%, .65)
+      &:hover
+        color: hsla(0, 0%, 100%, .95)
+      svg
+        height: 2.5rem
+        width: auto
   .videoPlayerInnerContainer
     position: relative
     padding: 0
@@ -16,19 +30,6 @@
     top: 0
     bottom: 0
     margin: auto
-
-    .videoExitButton
-      position: absolute
-      right: 0
-      top: 0
-      margin: 10px
-      padding: 5px
-      color: hsla(0, 0%, 0%, .75)
-      &:hover
-        color: hsla(0, 0%, 0%, .95)
-      svg
-        height: 2.5rem
-        width: auto
     .videoPlayer
       margin: auto
       right: 0
