--- a/styles/Poster.module.sass
+++ b/styles/Poster.module.sass
@@ -63,6 +63,7 @@
     @media (max-width: 550px)
       opacity: 100
     // Hide that ugly scrollbar, ew
+    scrollbar-width: none // Firefox
     &::-webkit-scrollbar
       width: 0
       background: transparent
